--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -1,5 +1,5 @@
 = navbar static: :top do
-  = navbar_header brand: 'Movie theatre', brand_link: root_path
+  = navbar_header brand: 'Movie theatre', brand_link: current_user ? films_path : root_path 
   - if current_user
     = navbar_collapse do
       = navbar_group class: 'foo', id: 'menu' do
