form UX with live preview

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,17 @@
 .panel-heading h4 {
   margin: 0px;
 }
+
+.row.for_nested label {
+  display: none;
+}
+
+input[type="file"] {
+  width: 230px;
+}
+
+.add_button, .add_button:hover, .add_button:focus {
+  color: green;
+  font-size: 18px;
+  text-decoration: none;
+}
