--- a/app/views/films/edit.html.haml
+++ b/app/views/films/edit.html.haml
@@ -1,17 +1,61 @@
-<h1>New Film</h1>
+<h1>Edit Film</h1>
+
 
 = bootstrap_nested_form_for(@film) do |f|
-  = f.text_field :title
-  = f.fields_for :galleries do |gallery_form|
-    - if gallery_form.object.snapshot?
-      = image_tag gallery_form.object.snapshot.url(:thumb)
-    - else
-      = gallery_form.file_field :snapshot unless gallery_form.object.snapshot?
-    = gallery_form.link_to_remove do
-      %span.glyphicon.glyphicon-remove-sign
-  %p
-    = f.link_to_add :galleries do
-      %span.glyphicon.glyphicon-plus-sign
+  = f.text_field :title, :data => { "validation" => "required", "validation-error-msg" => "This field is required" }
+  .row.for_nested
+    = f.fields_for :galleries do |gallery_form|
+      .col-lg-3.col-md-4.col-xs-6.thumb
+        - unless gallery_form.object.snapshot?
+          .thumbnail
+            %img{:height => "300", :width => "300", :class => 'preview', :src => "http://placehold.it/300x300"}/
+            .caption
+              %p
+                = gallery_form.file_field :snapshot, :data => { "validation" => "required", "validation-error-msg" => "Picture is required" }
+                = gallery_form.link_to_remove "Remove", class: "btn btn-danger remove_button", role: "button"
+        - else
+          .thumbnail
+            %img{:height => "300", :width => "300", :class => 'preview', :src => gallery_form.object.snapshot.url(:thumb)}/
+            .caption
+              %p
+                = gallery_form.link_to_remove "Remove", class: "btn btn-danger remove_button", role: "button"        
+
+    %p
+      = f.link_to_add :galleries, class: "add_button" do
+        = "Add"
+        %i.glyphicon.glyphicon-plus-sign
+
+  %hr
+  = f.submit "Update", :class => "btn btn-primary"
 
 
-  = f.submit "Update"
+:javascript
+
+  $(document).on('nested:fieldAdded', function(event){
+    // this field was just inserted into your form
+
+    var field = event.field; 
+    var fileField = field.find('input[type=file]');
+    var preview = field.find('.preview')
+
+    fileField.on('change', function(e) {
+      var file = fileField[0].files[0];
+      var reader = new FileReader();
+      reader.onload = function(e){
+        image_base64 = e.target.result;
+        preview.attr("src", image_base64);
+      };
+      reader.readAsDataURL(file);
+    });
+
+    fileField.click();
+    console.log(fileField)
+  })
+
+  $(document).ready( function() {
+    // use jquery validation too to prevent loosing on-fly thumbnails when submitting invalid film
+    $.validate();
+  });
+
+
+  
